style.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap");

:root {
  --primary: #96d48a76;;
}

body {
  margin: 0;
  font-family: "Josefin Sans", sans-serif;
  background-color: var(--primary);
  width: 100vw;
  height: 100vh;
}

.navig {
  /* background-color: var(--primary); */
  padding:2rem 10rem;
 
}

.navig div {
  text-align: center;
  margin: auto;
  padding: 1rem;
  font-size: large;
  border: 1px solid black;
}

.main-area {
  display: flex;
  max-width: 600px;
  margin: auto;
  flex-direction: column;
  align-items: center;
}

 
button {
  cursor: pointer;
  background-color: var(--primary);
  padding: 1rem;
  margin: 0.60rem;
  border: none;
  border-radius: 0.2rem;
}

#output{
    margin: 1rem 2rem;
    width: 60%;
    min-height: 15vh;
    border: 1px solid rgb(61, 59, 59);
}

#text-input{
  margin: 1.5rem;
  width: 60%;
  min-height: 15vh;
  border: 1px solid rgb(61, 59, 59);
  background-color: transparent;

}

footer {
  text-align: center;
  padding: 1rem 10rem;
  margin: auto;
  font-size: large;
  
  
}


.footer-header {
  padding-top: 0.30rem;
  text-align: center;
  font-size: larger;
  font-weight: bold;
  margin-bottom: 2rem;
}
.social-links{
 text-align: center;
padding: 1.5rem;
 border: 1px solid black;
}

.list-item-inline{
width: 100%;
list-style: none;
display: inline;
font-size: 30px;
color: black;
padding: 20px;
}

.list-item-inline .link{
  text-decoration: none;
  color: black;
  border-radius: 10px;
  border: 1px solid black;
  padding: 10px 5px 5px 5px;
  text-align: center;
}

.wallpaper img{
  position: absolute;
  /* background-color: black; */
  right: 20%;
  top: 20%;
}

